0.1-alpha3/_sources/gene/AGAP003246.rst.txt
:orphan:



AGAP003246
==========

Location: **2R:34,456,183-34,457,654**

Name: **CLIPB2**

Description: **Clip-domain serine protease**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP003246>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2R:34456183-34457654#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/BFS/2/6/index`
      - H12
      - Burkina Faso *An. gambiae*
      - 2R:34,420,000-34,460,000
      - 114
      - 92.9%
      - nan
    * - :doc:`../signal/XPEHH/BFS.UGS/2/5/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2R:34,420,000-34,480,000
      - 95
      - 96.7%
      - nan
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/AOM/2/3/index`
      - IHS
      - Angola *An. coluzzii*
      - 2R:33,940,000-34,440,000
      - 213
      - 99.8%
      - nan
    * - :doc:`../signal/XPEHH/AOM.BFM/2/7/index`
      - XPEHH
      - Angola *An. coluzzii*
      - 2R:34,320,000-34,440,000
      - 108
      - 86.9%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP003246';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


